# together

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  example.py  pyproject.toml  setup.cfg
examples/multipackage/: README.md  example.py  install.sh
examples/multipackage/together-sample/: setup.py  together_sample.py
examples/multipackage/together-sample/together_sample.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
examples/multipackage/together-subsample/: setup.py  together_subsample.py
examples/multipackage/together-subsample/together_subsample.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
examples/onefile/: README.md  example.py
tests/: conftest.py  test_basic.py  test_command_state.py  test_exception_handlers.py  test_malformed_trees.py  test_subcommand_list.py
together/: __init__.py  click_tools.py  core.py  exception_handlers.py  hookspec.py  registration.py  state.py
