[tool.poetry]
name = "together"
version = "0.2.1"
description = "Pluggable CLIs with click and pluggy"
authors = ["Stephen Rosen <sirosen@globus.org>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.2"
pluggy = "^0.13.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 88
default_section = "THIRDPARTY"
known_first_party = ["awsflock", "tests"]

[tool.pytest.ini_options]
addopts = "-v --cov awsflock --no-cov-on-fail"
testpaths = ["tests"]

[tool.coverage.run]
omit = [
    "tests/*", ".venv/*"
]
[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    # the pragma to disable coverage
    "pragma: no cover",
    # don't complain if tests don't hit unimplemented methods/modes
    "raise NotImplementedError",
    # don't check on executable components of importable modules
    "if __name__ == .__main__.:",
    # mypy-only code segments
    "if TYPE_CHECKING:",
    # type-checking overloads
    "@overload",
    "@typing.overload"
]

