[metadata]
name = together
version = 0.5.2
description = Pluggable CLIs with click and pluggy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/globus/together
author = Stephen Rosen
author_email = sirosen@globus.org

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
python_requires = >=3.6.2
install_requires =
    click<8
    pluggy==0.13.1
packages = find:

[options.extras_require]
dev =
    pytest<7
    pytest-cov<3

[bdist_wheel]
universal = True


[isort]
profile = black
default_section = "THIRDPARTY"
known_first_party =
    together
    tests


[tool:pytest]
addopts = -v --cov together --no-cov-on-fail


[coverage:run]
omit =
    tests/*
    .venv/*

[coverage:report]
show_missing = True
skip_covered = True
exclude_lines =
    # the pragma to disable coverage
    "pragma: no cover"
    # don't complain if tests don't hit unimplemented methods/modes
    "raise NotImplementedError"
    # don't check on executable components of importable modules
    "if __name__ == .__main__.:"
    # mypy-only code segments
    "if TYPE_CHECKING:"
    # type-checking overloads
    "@overload"
    "@typing.overload"
